# mahabharatha

./: -  .coverage  .gitignore  .pre-commit-config.yaml  .python-version  .test_durations  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HEART_BEAT.MD  LICENSE  MAHABHARATHA_PROJECT_INSTRUCTIONS.md  PROJECT_INSTRUCTIONS.md  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  review.md  verify_enforcement.py  verify_expansion.py
.claude/commands/: z:analyze.md  z:build.md  z:cleanup.md  z:design.md  z:document.md  z:estimate.md  z:explain.md  z:git.md  z:index.md  z:init.md  z:logs.md  z:merge.md  z:plan.md  z:refactor.md  z:retry.md  z:review.md  z:rush.md  z:security.md  z:select-tool.md  z:status.md  z:stop.md  z:test.md  z:worker.md  zerg:analyze.md  zerg:debug.md  zerg:design.md  zerg:init.md  zerg:plan.md  zerg:plugins.md  zerg:refactor.md  zerg:rush.md  zerg:test.md  zerg:worker.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  post-create.sh  post-start.sh
.devcontainer/mcp-servers/: credentials.env.example
.git-worktree/: HEAD  ORIG_HEAD  commondir  gitdir  index
.git-worktree/logs/: HEAD
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: changelog-check.yml  ci.yml  codeql.yml  command-validation.yml  docs.yml  pytest.yml  release.yml
.gsd/: .current-brainstorm  .current-feature  INFRASTRUCTURE.md  PROJECT.md  STATE.md  TEAM_CHARTER.md  WORKFLOW-NARRATIVE.md  ZERG-OPERATIONAL-SPEC.md
.gsd/sessions/: 2026-01-26-test-coverage.md  coverage-100-complete.md  dc-012-complete.md
.gsd/tasks/: META-PROMPT.md  PROGRESS.md  claude-code-prompts.md  session-tracker.md  task-graph.json
.gsd/wiki/: Architecture.md  Command-Reference.md  Configuration.md  Context-Engineering.md  Contributing.md  FAQ.md  Home.md  Plugins.md  Security.md  Troubleshooting.md  Tutorial.md  _Sidebar.md
.mahabharatha/: .current-feature  __init__.py  config.yaml  container.py  debug.py  devcontainer.py  document.py  estimate.py  git_ops.py  indexer.py  init_generator.py  metrics.py  orchestrator.py  ports.py  protocol.py  purge.py  quality_tools.py  research.py  rush.py  security.py  session.py  spawn.py  state.py  status.py  task_graph.py  worker_entry.sh  worker_runner.py  worktree.py
.mahabharatha/.mahabharatha/: state.json
.mahabharatha/design/: issue-7-audit-skipped-tests.md
.mahabharatha/gates/: __init__.py
.mahabharatha/hooks/: pre-commit
.mahabharatha/rules/: efficiency.yaml
.mahabharatha/schemas/: checkpoint.schema.json  state.schema.json  task.schema.json
.mahabharatha/state/: token-cache.json  tokens-unknown.json
.mahabharatha/tasks/: coverage-improvement-plan.json
.mahabharatha/templates/: implementer.md  quality-reviewer.md  spec-reviewer.md
.mahabharatha/tests/: __init__.py  test_analyze.py  test_build.py  test_container.py  test_debug.py  test_document.py  test_estimate.py  test_explain.py  test_gates.py  test_git_ops.py  test_indexer.py  test_metrics.py  test_orchestrator.py  test_ports.py  test_refactor.py  test_research.py  test_review.py  test_rush.py  test_security.py  test_spawn.py  test_state.py  test_status.py  test_task_graph.py  test_templates.py  test_test_runner.py  test_worker_runner.py  test_worktree.py
.mahabharatha/wiki/: Architecture-Module-Reference.md  Architecture-State-Management.md  Configuration.md  (+27 more)
.serena/: project.yml
.zerg/: .current-feature  analyze.py  config.yaml  container.py  debug.py  devcontainer.py  document.py  estimate.py  explain.py  git_ops.py  indexer.py  messages.py  metrics.py  orchestrator.py  ports.py  purge.py  quality_tools.py  refactor.py  research.py  rush.py  security.py  session.py  spawn.py  state.py  status.py  task_graph.py  template_engine.py  test_runner.py  worker_entry.sh  worker_runner.py  worktree.py
claudedocs/: backlog.md  claude_code_agent_teams_implementation_plan.md  debug-rush-performance-2026-02-04.md  dogfood-bugs.md  performance-report.md  performance_evaluation_factors.json  performance_evaluation_factors.md  plan-ci-streamline.md  plan-container-dogfooding.md  plan-fix-zerg-status.md  session-2026-01-26-documentation.md  zerg_launch_week_content.md  zerg_scratch.md
docs/: commands-deep.md  commands-quick.md  commands.md  configuration.md  context-engineering.md  design-principles.md  index.html  plugins.md  tutorial-minerals-store.md
mahabharatha/: __init__.py  __main__.py  adaptive_detail.py  architecture.py  architecture_gate.py  assign.py  ast_analyzer.py  ast_cache.py  backlog.py  backpressure.py  capability_resolver.py  charter.py  circuit_breaker.py  claude_tasks_reader.py  cli.py  command_executor.py  command_splitter.py  config.py  constants.py  containers.py  context_plugin.py  context_tracker.py  db.py  dependency_checker.py  depth_tiers.py  devcontainer_features.py  dryrun.py  efficiency.py  env_validator.py  escalation.py  event_emitter.py  exceptions.py  fs_utils.py  gates.py  git_ops.py  governance.py  graph_validation.py  heartbeat.py  inception.py  json_utils.py  (+57 more)
skills/: sc:hooks.md
tasks/: COVERAGE-100-BACKLOG.md
tests/: README.md  conftest.py  test_claude_tasks_reader.py  test_config.py  test_doc_engine.py  test_gates.py  test_git_ops.py  test_launcher.py  test_levels.py  test_types.py  test_worker_protocol.py
zerg/: __init__.py  adaptive_detail.py  architecture.py  assign.py  ast_analyzer.py  backlog.py  capability_resolver.py  charter.py  claude_tasks_reader.py  cli.py  command_executor.py  command_splitter.py  config.py  constants.py  containers.py  context_plugin.py  context_tracker.py  dependency_checker.py  depth_tiers.py  dryrun.py  efficiency.py  env_validator.py  escalation.py  event_emitter.py  exceptions.py  formatter_detector.py  fs_utils.py  gates.py  git_ops.py  governance.py  graph_validation.py  heartbeat.py  json_utils.py  knowledge.py  launcher.py  launcher.py,cover  launcher_configurator.py  launcher_types.py  level_coordinator.py  levels.py  (+46 more)
(+1110 files in other folders)
