[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerg"
version = "0.1.0"
description = "Parallel Claude Code execution system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "ZERG Team"}
]
keywords = ["claude", "parallel", "orchestration", "devcontainer", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1",
    "pip-audit>=2.7.0",
]

[project.scripts]
zerg = "zerg.cli:cli"

[project.urls]
Homepage = "https://github.com/zerg-dev/zerg"
Documentation = "https://github.com/zerg-dev/zerg#readme"
Repository = "https://github.com/zerg-dev/zerg"

[tool.setuptools.packages.find]
where = ["."]
include = ["zerg*"]

[tool.setuptools.package-data]
zerg = ["py.typed", "schemas/*.json", "data/commands/*.md"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "S"]
ignore = [
    "S101",   # assert used for internal invariants (not user-facing validation)
    "S105",   # false positive: GateResult.PASS = "pass" is not a password
    "S108",   # /tmp paths are for container health files (by design)
    "S110",   # try-except-pass used for best-effort checks (intentional)
    "S311",   # random used for jitter, not cryptographic purposes
    "S324",   # md5 used for content fingerprinting, not security
    "S602",   # shell=True needed for diagnostic recovery commands
    "S603",   # subprocess calls are core to ZERG's orchestration design
    "S607",   # partial paths are intentional (docker, git CLI tools)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Allow assert in tests

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert outside tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore:cannot collect test class.*because it has a __init__ constructor:pytest.PytestCollectionWarning",
    "ignore:cannot collect 'test_cmd' because it is not a function:pytest.PytestCollectionWarning",
    "ignore:.*found in sys.modules after import of package.*:RuntimeWarning",
]
markers = [
    "real_e2e: Tests requiring real Claude API access",
    "slow: Slow-running tests",
    "docker: Tests requiring a running Docker daemon",
    "e2e: end-to-end tests requiring external services",
]
