[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerg-ai"
version = "0.2.0"
description = "Parallel Claude Code execution system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "rocklambros", email = "rocklambros@users.noreply.github.com"}
]
keywords = ["claude", "parallel", "orchestration", "devcontainer", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
]

dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.0",
    "pytest-split>=0.8",
    "pytest-timeout>=2.0",
    "mypy>=1.0",
    "ruff>=0.14,<0.15",
    "pip-audit>=2.7.0",
    "pre-commit>=3.0",
    "types-pyyaml>=6.0.12",
]
metrics = ["anthropic>=0.40.0"]
performance = ["orjson>=3.9.0"]
all = ["zerg-ai[dev]", "zerg-ai[metrics]", "zerg-ai[performance]"]

[project.scripts]
zerg = "zerg.cli:cli"

[project.urls]
Homepage = "https://github.com/rocklambros/zerg"
Documentation = "https://github.com/rocklambros/zerg/wiki"
Repository = "https://github.com/rocklambros/zerg"
Issues = "https://github.com/rocklambros/zerg/issues"
Changelog = "https://github.com/rocklambros/zerg/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["zerg*"]

[tool.setuptools.package-data]
zerg = ["py.typed", "schemas/*.json", "data/commands/*.md"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
show_error_codes = true
disallow_untyped_defs = true
strict = true
exclude = ["tests/fixtures"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = [".zerg", "tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE001"]
fixable = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # Allow assert in tests

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert outside tests

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
timeout = 120
filterwarnings = [
    "ignore:cannot collect test class.*because it has a __init__ constructor:pytest.PytestCollectionWarning",
    "ignore:cannot collect 'test_cmd' because it is not a function:pytest.PytestCollectionWarning",
    "ignore:.*found in sys.modules after import of package.*:RuntimeWarning",
]
markers = [
    "smoke: Critical path tests (< 30s total)",
    "slow: Slow-running tests (excluded from fast tier)",
    "docker: Tests requiring a running Docker daemon",
    "e2e: End-to-end tests requiring external services",
    "real_e2e: Tests requiring real Claude API access",
]
